--- a/template/package.json
+++ b/template/package.json
@@ -7,6 +7,7 @@
     {{/private}}
   "scripts": {
     "dev": "gulp",
+    "unit": "karma start test/unit/karma.conf.js",
     "build": "webpack --progress --hide-modules --config config/production.webpack.config.js"
   },
   "dependencies": {
@@ -44,6 +45,24 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.5.1",
     "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-standard": "^1.3.2"
+    "eslint-plugin-standard": "^1.3.2",
+    "webpack-merge": "^0.8.4",
+    "isparta-loader": "^2.0.0",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "lolex": "^1.4.0",
+    "mocha": "^2.4.5",
+    "phantomjs-prebuilt": "^2.1.3",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "chai": "^3.5.0",
+    "function-bind": "^1.1.0"
   }
 }
