--- a/template/package.json
+++ b/template/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^2.21.0",
     "json-loader": "^0.5.4",
     "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^8.5.2",
     "vue-resource": "^0.8.0",
