--- a/template/package.json
+++ b/template/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "{{ name }}",
-    "description": "{{ description }}",
-    "author": "{{ author }}",
-    {{#private}}
-    "private": true,
-    {{/private}}
+  "name": "{{ name }}",
+  "description": "{{ description }}",
+  "author": "{{ author }}",
+  {{#private}}
+  "private": true,
+  {{/private}}
   "scripts": {
     "dev": "gulp",
     "unit": "karma start test/unit/karma.conf.js",
@@ -55,6 +55,7 @@
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
+    "karma-sinon-stub-promise": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
@@ -63,6 +64,7 @@
     "phantomjs-prebuilt": "^2.1.3",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "sinon-stub-promise": "^3.0.1",
     "chai": "^3.5.0",
     "function-bind": "^1.1.0"
   }
