--- a/template/package.json
+++ b/template/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-html": "^1.5.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "webpack-merge": "^0.8.4",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
