--- a/template/package.json
+++ b/template/package.json
@@ -15,7 +15,7 @@
     "hapi": "^13.4.1",
     "inert": "^4.0.0",
     "vue": "^1.0.24",
-    "vue-resource": "^0.8.0",
+    "vue-resource": "^0.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
